--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
     *, *:before, *:after {
     box-sizing: inherit;
@@ -21,18 +22,29 @@ header {
 
 .main-content {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
     flex: 1;
+    gap: 25px;
 }
 
 .grid {
-    background-color: antiquewhite;
-    margin-top: 100px;
-    border: 1px solid black;
+    background-color: gainsboro;
+    margin-top: 50px;
     width: 500px;
     height: 500px;
     display: grid;
-    gap: 5px;
+    gap: 6px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
+}
+
+.grid > div {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bolder;
+    font-size: 4rem;
 }
