--- a/css/styles.css
+++ b/css/styles.css
@@ -26,12 +26,12 @@ header {
     align-items: center;
     flex-direction: column;
     flex: 1;
-    gap: 25px;
+    gap: 10px;
 }
 
 .grid {
     background-color: gainsboro;
-    margin-top: 50px;
+    margin-top: 25px;
     width: 500px;
     height: 500px;
     display: grid;
@@ -53,5 +53,11 @@ header {
     padding: 10px;
     text-align: center;
     font-size: 1rem;
-    margin-top: 10px;
+    margin-top: 25px;
+}
+
+.winner-div {
+    display: flex;
+    height: 30px;
+    align-items: center;
 }
